# small-coding-agent

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  INTERFACE.md  README.md  SEAMAP.md  TODO.md  pyproject.toml
.claude/: settings.json
design/: architecture.md
frontdoor/: Dockerfile.stub  contract.py  handler.py  requirements-stub.txt  requirements.txt  stub.py
notes/: decisions.md  done.md  frontdoor-integration.md  infrastructure.md  local-testing-advice.md  telemetry.md
scripts/: cloud-smoke.sh  contract-smoke.py  deploy-frontdoor.sh  deploy.sh  frontdoor-smoke.sh  github-auth-smoke.py  loop-smoke.py  pr-tools-smoke.py  propagation-test.sh  propagation_test.py  publish-stub.sh  smoke-container.sh  smoke-local.sh  start-collector.sh  stub-smoke.sh  stub-trace-smoke.sh  workspace-smoke.py
scripts/aws/: permissions-policy.json  trust-policy.json
src/agent/: __init__.py  github_auth.py  loop.py  main.py  observability.py  tools.py  workspace.py
