[project]
name = "trainer-agent"
version = "0.1.0"
description = "Trainer Agent — a single-purpose coding agent on Bedrock AgentCore that trains jessitron/mtg-deck-shuffler to give better in-game recommendations."
requires-python = ">=3.10,<3.14"
dependencies = [
    "bedrock-agentcore",
    "boto3",
    "strands-agents",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "python-dotenv",
]

[project.scripts]
agent = "agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
